# raytracing

./: CMakeLists.txt  MathHelper.cpp  MathHelper.h  Quaternion.cpp  Quaternion.h  README.md  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  World.cpp  World.h  kernel.cl  main.cpp
Objects/: Ball.cpp  Ball.h  Box.cpp  Box.h  Object.cpp  Object.h  Wall.cpp  Wall.h
Shapes/: Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
